duplication removed and methods allowed
